distribution client ssl